--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -5,7 +5,6 @@
     justify-content: center;
     margin-top: 2em;
   }
-
   .headline-left-box {
     display: flex;
     justify-content: center;
@@ -14,13 +13,11 @@
     margin-top: 2em;
     margin-left: 1em;
   }
-
   .headline-right-box {
     margin: 1em;
     display: flex;
     justify-content: center;
   }
-
   .headline-img {
     max-width: 100%;
   }
@@ -32,7 +29,6 @@
     justify-content: center;
     margin: 12em 0em;
   }
-
   .headline-left-box {
     display: flex;
     justify-content: center;
@@ -40,38 +36,45 @@
     flex-direction: column;
     padding-right: 2em;
   }
-
   .headline-right-box {
     width: 50%;
     display: flex;
     justify-content: center;
   }
-
   .headline-img {
     max-width: 100%;
   }
 }
 
-.main-info > div > p:nth-child(1) {
-  color: #16fcd2;
-  font-weight: 250;
-  font-size: 24px;
-  letter-spacing: 0.1em;
-  line-height: 32px;
-}
-.main-info > div > p:nth-child(2) {
-  color: #ffffff;
-  font-weight: 500;
-  font-size: 34px;
-  line-height: 54px;
-}
+.main-info {
+  > div {
+    > p {
+      &:nth-child(1) {
+        color: #16fcd2;
+        font-weight: 250;
+        font-size: 24px;
+        letter-spacing: 0.1em;
+        line-height: 32px;
+      }
 
-.main-info > div div p {
-  color: rgba(255, 255, 255, 0.6);
-  font-weight: 250;
-  font-size: 18px;
-  line-height: 32px;
-  letter-spacing: 0.1em;
+      &:nth-child(2) {
+        color: #ffffff;
+        font-weight: 500;
+        font-size: 34px;
+        line-height: 54px;
+      }
+    }
+
+    div {
+      p {
+        color: rgba(255, 255, 255, 0.6);
+        font-weight: 250;
+        font-size: 18px;
+        line-height: 32px;
+        letter-spacing: 0.1em;
+      }
+    }
+  }
 }
 
 .tab-div {
@@ -86,34 +89,32 @@
   justify-content: center;
 }
 
-ul.nav li {
-  padding-inline: 2em;
-  padding-top: 0.7em;
-  padding-bottom: 0.7em;
-  text-align: center;
-  color: white;
-  cursor: pointer;
-  transition: all 0.7s;
-  border-radius: 1.5em;
-}
-@media (max-width: 600px) {
-  ul.nav li {
-    padding-inline: 1.2em;
-  }
-}
-ul.nav li:hover {
-  background: grey;
-}
+ul.nav {
+  li {
+    padding-inline: 2em;
+    padding-top: 0.7em;
+    padding-bottom: 0.7em;
+    text-align: center;
+    color: white;
+    cursor: pointer;
+    transition: all 0.7s;
+    border-radius: 1.5em;
 
-ul.nav li.active {
-  background: rgb(88, 28, 241);
+    &:hover {
+      background: grey;
+    }
+  }
+
+  li.active {
+    background: #3e46f3;
+  }
 }
 
 .card-root {
-  background-color: inherit;
+  background-color: rgba(230, 230, 230, 0.05);
   max-width: 100%;
+  border: 1px solid #3e46f3;
   border-radius: 2em;
-  box-shadow: 0 0 0.2em 0.2em rgb(88, 28, 241);
   height: 100%;
 }
 
@@ -125,28 +126,40 @@ ul.nav li.active {
 
 .icons {
   margin-top: 1em;
-  margin-bottom: 1em;
 }
 
-.MuiTab-root{
-  color: white;
+.tabs {
+  button {
+    font-size: 12px;
+    line-height: 32px;
+    letter-spacing: 0.1em;
+    color: #ffffff;
+  }
+
+  .MuiTabs-indicator {
+    background: #3e46f3;
+  }
 }
 
 .content {
   margin: 1em;
+
+  > div {
+    > p {
+      &:nth-child(1) {
+        color: white;
+        font-weight: bold;
+        font-size: 2em;
+        letter-spacing: 0.1em;
+        line-height: 1em;
+        margin-bottom: 0.8em;
+      }
+    }
+  }
 }
 
 .content-spacing {
   margin-bottom: 1.6em;
-}
-
-.content > div > p:nth-child(1) {
-  color: white;
-  font-weight: bold;
-  font-size: 2em;
-  letter-spacing: 0.1em;
-  line-height: 1em;
-  margin-bottom: 0.8em;
 }
 
 .content-text-title {
@@ -158,7 +171,7 @@ ul.nav li.active {
 }
 
 .content-time {
-  color: darkviolet;
+  color: #3e46f3;
   font-weight: 350;
   font-size: 1.2em;
   letter-spacing: 0.1em;
@@ -181,7 +194,7 @@ ul.nav li.active {
 
 .button {
   width: 70%;
-  border: 0;
+  border: 0.5px solid;
   line-height: 2.5;
   padding: 0 2em;
   font-size: 1em;
@@ -189,16 +202,22 @@ ul.nav li.active {
   color: #fff;
   text-shadow: 1px 1px 1px #000;
   border-radius: 40px;
-  background-color: darkviolet;
-  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6),
-    inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+  background-color: #3e46f3;
+  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6), inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+
+  &:hover {
+    background-color: darkviolet;
+  }
+
+  &:active {
+    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6), inset 2px 2px 3px rgba(0, 0, 0, 0.6);
+  }
 }
 
-.button:hover {
-  background-color: rgb(88, 28, 241);
-}
-
-.button:active {
-  box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6),
-    inset 2px 2px 3px rgba(0, 0, 0, 0.6);
+@media (max-width: 600px) {
+  ul.nav {
+    li {
+      padding-inline: 1.2em;
+    }
+  }
 }
