--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,4 +1,4 @@
-@media (max-width: 1000px) {
+@media (max-width: 991px) {
   .headline-root {
     display: flex;
     flex-direction: column;
@@ -23,7 +23,7 @@
   }
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 992px) {
   .headline-root {
     display: flex;
     justify-content: center;
@@ -131,7 +131,7 @@ ul.nav {
 .tabs {
   button {
     font-size: 12px;
-    line-height: 32px;
+    line-height: 2em;
     letter-spacing: 0.1em;
     color: #ffffff;
   }
@@ -189,10 +189,10 @@ ul.nav {
 .button-div {
   display: flex;
   justify-content: center;
-  padding-bottom: 15px;
+  padding-bottom: 1em;
 }
 
-.button {
+.research {
   width: 70%;
   border: 0.5px solid;
   line-height: 2.5;
