--- a/src/components/project-details/project-details.scss
+++ b/src/components/project-details/project-details.scss
@@ -93,6 +93,42 @@
       }
     }
   }
+
+  .progress {
+    background-color: rgba(251, 251, 251, 0.07);
+    border-radius: 20px;
+    padding-block: 3em;
+    .slider{
+      width: 70%;
+      padding-inline: 2em;
+    }
+    .invest{
+      width: 30%;
+      .invest-button{
+          width: 70%;
+          border: 0.5px solid;
+          line-height: 2.5;
+          padding: 0 2em;
+          font-size: 16px;
+          text-align: center;
+          color: #fff;
+          text-shadow: 1px 1px 1px #000;
+          border-radius: 40px;
+          background-color: #3e46f3;
+          box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6), inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+          letter-spacing: 0.1em;
+
+          &:hover {
+            background-color: darkviolet;
+          }
+
+          &:active {
+            box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6), inset 2px 2px 3px rgba(0, 0, 0, 0.6);
+          }
+       }
+    }
+  }
+
   .table-section {
     background: rgba(230, 230, 230, 0.05);
     border-radius: 22px;
