--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -115,13 +115,14 @@ ul.nav {
   max-width: 100%;
   border: 1px solid #3e46f3;
   border-radius: 2em;
-  height: 100%;
+  height: 735px;
 }
 
 .img {
   border-top-left-radius: 2em;
   border-top-right-radius: 2em;
   width: 100%;
+  height: 275px;
 }
 
 .icons {
