Project details updated

--- a/src/components/project-details/project-details.scss
+++ b/src/components/project-details/project-details.scss
@@ -9,6 +9,7 @@
       background: rgba(255, 255, 255, 0.24);
       border-radius: 22px;
       display: inline-block;
+      padding: 10px;
     }
     .social-links {
       height: 35px;
@@ -37,96 +38,57 @@
   }
   .additional-details {
     .graph {
-      background-color: #6a606c;
+      margin-right: 3rem;
+      width: 70%;
       border-radius: 22px;
-    }
-    .spacer {
-      width: 2rem;
+      img {
+        width: 100%;
+        height: auto;
+        border-radius: 22px;
+      }
     }
     .screening {
-      min-width: 425px;
       background: rgba(230, 230, 230, 0.05);
       border-radius: 22px;
-      .icon {
-        width: 50px;
-        height: 50px;
-        background: rgba(255, 255, 255, 0.24);
-        border-radius: 11px;
-        display: inline-block;
-      }
-      .project-name {
-        font-weight: 500;
-        font-size: 20px;
-        line-height: 27px;
-        letter-spacing: 0.1em;
-        color: #ffffff;
-      }
-      .s-title {
-        font-weight: 300;
-        font-size: 9px;
-        letter-spacing: 0.1em;
-        color: #ffffff;
-      }
-      .b-title {
-        font-weight: 500;
-        font-size: 12px;
-        letter-spacing: 0.1em;
-        color: #ffffff;
-      }
-      .ckbox {
-        background: rgba(251, 251, 251, 0.07);
-        border-radius: 4px;
-        height: 25px;
-        width: 25px;
-        font-size: 18px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-right: 1rem;
-      }
-      .untick {
-        color: rgba(255, 255, 255, 0.21);
-      }
-      .tick {
-        background: rgba(96, 22, 252, 0.31);
-        color: #6016fc;
+
+      > div {
+        > p {
+          &:nth-child(1) {
+            color: white;
+            font-weight: bold;
+            font-size: 2em;
+            letter-spacing: 0.1em;
+            line-height: 1em;
+            margin-bottom: 0.8em;
+          }
+        }
       }
     }
   }
 
   .progress-container {
-    background-color: rgba(251, 251, 251, 0.07);
-    border-radius: 20px;
+    .graph {
+      background: rgba(230, 230, 230, 0.05);
+      border-radius: 22px;
+      margin-right: 3rem;
+      width: 70%;
+      border-radius: 22px;
+    }
+    .screening {
+      background: rgba(230, 230, 230, 0.05);
+      border-radius: 22px;
+      width: calc(30% - 3rem);
+      button {
+        width: 100%;
+        border-color: white;
+        color: white;
+      }
+    }
     p {
-      color: white;
-      margin: 0;
-    }
-    .progress-line {
-      min-width: 300px;
-    }
-    .invest-button {
-      min-width: 300px;
-      border: 0.5px solid;
-      line-height: 2.5;
-      padding: 0 2em;
       font-size: 16px;
-      text-align: center;
-      color: #fff;
-      text-shadow: 1px 1px 1px #000;
-      border-radius: 40px;
-      background-color: #3e46f3;
-      box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6),
-        inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+      line-height: 32px;
       letter-spacing: 0.1em;
-
-      &:hover {
-        background-color: darkviolet;
-      }
-
-      &:active {
-        box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6),
-          inset 2px 2px 3px rgba(0, 0, 0, 0.6);
-      }
+      color: #ffffff;
     }
   }
 
@@ -179,5 +141,30 @@
         border-top-right-radius: 16px;
       }
     }
+  }
+  .outline-input {
+    width: 100%;
+    input {
+      color: white !important;
+    }
+    .MuiButtonBase-root {
+      font-size: 18px !important;
+      color: white !important;
+    }
+    .MuiOutlinedInput-notchedOutline {
+      border-color: white !important;
+    }
+    legend {
+      display: none;
+    }
+  }
+}
+@media (max-width: 1400px) {
+  .graph {
+    width: 100% !important;
+    margin-right: 0 !important;
+  }
+  .screening {
+    width: 100% !important;
   }
 }
