--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -33,3 +33,17 @@ footer .list-group-item {
     padding: 1rem;
     margin: 0;
 }
+
+@media (max-width: 768px) {
+    footer.justify-content-between {
+        flex-wrap: wrap;
+        justify-content: center !important;
+    }
+    footer.justify-content-between > * {
+        display: flex;
+        width: 100%;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+    }
+}
