--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,6 @@ body,
   font-family: "Poppins", sans-serif;
 }
 body {
-  background-image: url("assets/img/main-bg.webp");
+  background-image: url("assets/img/main-bg.png");
   background-size: cover;
 }
