Background image issue fixed

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,9 @@ body,
   font-family: "Poppins", sans-serif;
 }
 body {
-  background-image: url("assets/img/main-bg.png");
+  background: url("assets/img/main-bg.png") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
 }
