--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200&display=swap");
+
 .app-wrapper {
   font-family: "Poppins", sans-serif;
   background-image: url("assets/img/main-bg.png");
