--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -84,6 +84,28 @@ p {
 }
 }
 }
+.project-button-div {
+  display: flex;
+  justify-content: flex-start;
+  max-width: 300px;
+}
+
+.project-button {
+  width: 70%;
+  border: 0.5px solid;
+  line-height: 2.5;
+  padding: 0 2em;
+  font-size: 1em;
+  text-align: center;
+  color: #fff;
+  text-shadow: 1px 1px 1px #000;
+  border-radius: 10px;
+  background-color: rgb(88,28,242);
+  &:hover {
+    background-color: darkviolet;
+    color: #ffffff;
+  }
+}
 
 .project-selection-text-container > p:nth-child(1) {
   margin-top: 50px;
@@ -122,7 +144,7 @@ p {
 .detail-report-container .detail-report-image {
   background-position: center;
   background-repeat: no-repeat;
-  background-image: url(../../assets/img/Detail-report.png);
+  background-image: url(../../assets/img/Detail_report.png);
   background-size: contain;
   height: 385px;
   width: 50%;
