--- a/src/components/project-details/project-details.scss
+++ b/src/components/project-details/project-details.scss
@@ -50,6 +50,7 @@
     .screening {
       background: rgba(230, 230, 230, 0.05);
       border-radius: 22px;
+      width: calc(30% - 3rem);
 
       > div {
         > p {
@@ -67,21 +68,74 @@
   }
 
   .progress-container {
+    .progress-details span {
+      font-family: Poppins;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 12px;
+      line-height: 32px;
+      letter-spacing: 0.1em;
+      color: #ffffff;
+    }
     .graph {
       background: rgba(230, 230, 230, 0.05);
       border-radius: 22px;
       margin-right: 3rem;
       width: 70%;
       border-radius: 22px;
+
+      .MuiLinearProgress-root {
+        height: 18px;
+        border-radius: 23px;
+        background: rgba(165, 122, 255, 0.39);
+        .MuiLinearProgress-bar {
+          background-color: #6016fc;
+          border-radius: 23px;
+        }
+      }
     }
     .screening {
       background: rgba(230, 230, 230, 0.05);
       border-radius: 22px;
       width: calc(30% - 3rem);
-      button {
+      .investment-details {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 32px;
+        letter-spacing: 0.1em;
+        margin-bottom: 0;
+        color: rgba(255, 255, 255, 0.65);
+      }
+      .connect-button {
+        background: #6016fc;
+        border-radius: 9px;
+        justify-content: center;
+        height: 50px;
+        p {
+          font-family: Poppins;
+          font-style: normal;
+          font-weight: 700;
+          font-size: 12px;
+          line-height: 18px;
+          text-align: center;
+          letter-spacing: 0.1em;
+          text-transform: uppercase;
+          color: #ffffff;
+        }
+      }
+      .MuiButton-root {
         width: 100%;
-        border-color: white;
-        color: white;
+        background: #6016fc;
+        border-radius: 9px;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 10px;
+        line-height: 15px;
+        text-align: center;
+        letter-spacing: 0.1em;
+        margin-top: 1rem;
+        color: #ffffff;
       }
     }
     p {
@@ -146,13 +200,18 @@
     width: 100%;
     input {
       color: white !important;
+      padding: 0.5rem 1rem;
     }
     .MuiButtonBase-root {
-      font-size: 18px !important;
-      color: white !important;
+      font-style: normal !important;
+      font-weight: 400 !important;
+      font-size: 12px !important;
+      line-height: 12px !important;
+      color: #ffffff !important;
     }
     .MuiOutlinedInput-notchedOutline {
-      border-color: white !important;
+      border: 1px solid #6016fc !important;
+      border-radius: 9px;
     }
     legend {
       display: none;
