--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,89 +1,40 @@
 @import '../../index.scss';
 
-.container{
+.container {
   font-family: 'Poppins', sans-serif;
 }
 
-@media (max-width: 991px) {
-  .headline-root {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-top: 2em;
-  }
-  .headline-left-box {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    width: 75%;
-    margin-top: 2em;
-    margin-left: 1em;
-  }
-  .headline-right-box {
-    margin: 1em;
-    display: flex;
-    justify-content: center;
-  }
-  .headline-img {
-    height: 500px;
-    max-width: 100%;
-  }
-}
-
-@media (min-width: 992px) {
-  .headline-root {
-    display: flex;
-    justify-content: center;
-    margin: 2em 0em;
-  }
-  .headline-left-box {
-    display: flex;
-    justify-content: center;
-    width: 50%;
-    flex-direction: column;
-    padding-right: 2em;
-  }
-  .headline-right-box {
-    width: 50%;
-    display: flex;
-    justify-content: center;
-  }
-  .headline-img {
-    height: 650px;
-    max-width: 100%;
-  }
-}
-
 .main-info {
-> div {
-> p {
-&:nth-child(1) {
-   color: #16fcd2;
-   font-weight: 250;
-   font-size: 24px;
-   letter-spacing: 0.1em;
-   line-height: 32px;
- }
+  >div {
+    >p {
+      &:nth-child(1) {
+        color: #16fcd2;
+        font-weight: 250;
+        font-size: 24px;
+        letter-spacing: 0.1em;
+        line-height: 32px;
+      }
 
-&:nth-child(2) {
-   color: #ffffff;
-   font-weight: 500;
-   font-size: 34px;
-   line-height: 54px;
- }
+      &:nth-child(2) {
+        color: #ffffff;
+        font-weight: 500;
+        font-size: 34px;
+        line-height: 54px;
+      }
+    }
+
+    div {
+      p {
+        color: rgba(255, 255, 255, 0.6);
+        font-weight: 250;
+        font-size: 18px;
+        line-height: 32px;
+        letter-spacing: 0.1em;
+      }
+    }
+  }
 }
 
-div {
-p {
-  color: rgba(255, 255, 255, 0.6);
-  font-weight: 250;
-  font-size: 18px;
-  line-height: 32px;
-  letter-spacing: 0.1em;
-}
-}
-}
-}
 .project-button-div {
   display: flex;
   justify-content: flex-start;
@@ -100,144 +51,165 @@ p {
   color: #fff;
   text-shadow: 1px 1px 1px #000;
   border-radius: 10px;
-  background-color: rgb(88,28,242);
+  background-color: rgb(88, 28, 242);
+
   &:hover {
     background-color: darkviolet;
     color: #ffffff;
   }
 }
 
-.project-selection-text-container > p:nth-child(1) {
+.project-selection-text-container p {
   margin-top: 50px;
-  color: #16fcd2;
-  font-weight: 600;
-  font-size: 24px;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 32px;
+  text-align: center;
   letter-spacing: 0.1em;
-  line-height: 32px;
+  color: #16FCD2;
 }
 
-.project-selection-container .project-selection-image {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-image: url(../../assets/img/Project-selection.png);
-  height: 350px;
-  width: 50%;
-}
-.project-selection-container .project-selection-text {
-  width: 50%;
-}
-.project-selection-container .project-selection-text p:nth-child(1) {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 34px;
-  line-height: 54px;
-  color: #ffffff;
-}
-.project-selection-container .project-selection-text p:nth-child(2) {
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 32px;
-  color: rgba(255, 255, 255, 0.6);
+.container-with-image {
+  .section-image {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-image: url(../../assets/img/Project-selection.png);
+    height: 350px;
+    width: 50%;
+  }
+
+  .section-text {
+    width: 50%;
+
+    p {
+      &:nth-child(1) {
+        font-style: normal;
+        font-weight: bold;
+        font-size: 34px;
+        line-height: 54px;
+        color: #ffffff;
+      }
+
+      &:nth-child(2) {
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 32px;
+        color: rgba(255, 255, 255, 0.6);
+      }
+    }
+
+  }
+
 }
 
-.detail-report-container .detail-report-image {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url(../../assets/img/Detail_report.png);
-  background-size: contain;
-  height: 385px;
-  width: 50%;
-}
-.detail-report-container .detail-report-text {
-  width: 50%;
-}
-.detail-report-container .detail-report-text p:nth-child(1) {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 34px;
-  line-height: 54px;
-  color: #ffffff;
-}
-.detail-report-container .detail-report-text p:nth-child(2) {
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 34px;
-  color: rgba(255, 255, 255, 0.6);
+.cards-container {
+  display: flex;
+  flex-direction: row;
+
+  >div {
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 5px;
+    flex-basis: 0;
+
+    >div {
+      display: inline-block;
+      color: white;
+      background: rgba(255, 255, 255, 0.03);
+      border-radius: 3px;
+    }
+
+    >p {
+      &:nth-child(2) {
+        font-weight: bold;
+        font-size: 20px;
+        line-height: 27px;
+        color: white;
+      }
+
+      &:nth-child(3) {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 32px;
+        color: rgba(255, 255, 255, 0.6);
+      }
+    }
+  }
 }
 
 
-.tier-system-container .tier-system-image {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url(../../assets/img/Tierless.png);
-  background-size: contain;
-  height: 385px;
-  width: 50%;
-}
-.tier-system-container .tier-system-text {
-  width: 50%;
-}
-.tier-system-container .tier-system-text p:nth-child(1) {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 34px;
-  line-height: 54px;
-  color: #ffffff;
-}
-.tier-system-container .tier-system-text p:nth-child(2) {
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 32px;
-  color: rgba(255, 255, 255, 0.6);
+@media (max-width: 991px) {
+  .headline-root {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 2em;
+  }
+
+  .headline-left-box {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 75%;
+    margin-top: 2em;
+    margin-left: 1em;
+  }
+
+  .headline-right-box {
+    margin: 1em;
+    display: flex;
+    justify-content: center;
+  }
+
+  .headline-img {
+    height: 500px;
+    max-width: 100%;
+  }
+
+  .cards-container {
+    flex-direction: column;
+
+    >div {
+      margin-right: 0 !important;
+    }
+  }
+
+  .section-image {
+    height: 320px !important;
+  }
 }
 
 @media (max-width: 575px) {
-  .tier-system-text,
-  .detail-report-text,
-  .project-selection-text{
+  .section-text {
     width: 100% !important;
   }
 }
 
-.cards-container{
-  display: flex ;
-  flex-direction: row;
-}
+@media (min-width: 992px) {
+  .headline-root {
+    display: flex;
+    justify-content: center;
+    margin: 2em 0em;
+  }
 
-.cards-container > div {
-  background: rgba(255, 255, 255, 0.05);
-  border-radius: 5px;
-  flex-basis: 0;
-}
-.cards-container > div > p:nth-child(2) {
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 27px;
-  color: white;
-}
-.cards-container > div > p:nth-child(3) {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 32px;
-  color: rgba(255, 255, 255, 0.6);
-}
-.cards-container > div > div {
-  display: inline-block;
-  color: white;
-  background: rgba(255, 255, 255, 0.03);
-  border-radius: 3px;
-}
-@media (max-width: 991px) {
-  .cards-container {
+  .headline-left-box {
+    display: flex;
+    justify-content: center;
+    width: 50%;
     flex-direction: column;
+    padding-right: 2em;
   }
-  .cards-container > div {
-    margin-right: 0 !important;
+
+  .headline-right-box {
+    width: 50%;
+    display: flex;
+    justify-content: center;
   }
-  .tier-system-image,
-  .detail-report-image,
-  .project-selection-image{
-    height: 320px !important;
+
+  .headline-img {
+    height: 650px;
+    max-width: 100%;
   }
 }
